'每天一点点'

--- a/性能优化详细.md
+++ b/性能优化详细.md
@@ -160,7 +160,79 @@ Gzip 并不是万能的，它的原理是在一个文本文件中找一些重复
 1. 首屏或其他模块加载速度快、
 2. 为了更好的 SEO 效果
 
+* 如何给 React 开启服务端渲染
+* 如何给 Vue 开启服务端渲染
+
+SSR 主要用于解决单页应用首屏渲染慢以及 SEO 问题
 但同时：提高了服务器压力，吃 CPU，内存等资源，优化不好提高成本。
 
 ##  浏览器渲染机制
 
+![浏览器渲染过程](./img/浏览器渲染过程.png)
+
+* 优化 - CSS 选择器问题
+
+``` css
+#ul li {}
+```
+
+实际上 CSS 解析器是从右往左的，它会先查找所有 li 元素，并且逐个确认这个 li 元素的父元素的 id 是不是 ul。
+所以像通配符 * { padding: 0; margin: 0 } 这种，小伙伴们就应该减少设置，要不然页面的元素越多遍历匹配越久。
+
+1. 避免使用通配符 * 等。
+2. 减少使用标签选择器，用类选择器或者标签选择器替代，例如 span 替换为 .span。
+3. 减少嵌套匹配，例如 #ul li a。
+
+* 优化 - CSS 加载问题
+
+为了避免 HTML 解析完毕，但是 CSS 没有解析完毕，从而导致页面直接 “裸奔” 在用户面前的问题，浏览器在处理 CSS 规则树的时候，不会渲染任何已处理的内容。
+所以很多时候，我们会让网页尽早处理 CSS，即在 head 标签中启用 link 或者启用 CDN 实现静态资源加载速度的优化。
+
+* 优化 - JS 加载问题
+
+当 HTML 解析器遇上 script 标签时，它会暂停解析过程，将控制器交给 JS 引擎。
+如果是内部的 JS 代码，它会直接执行，但是如果是 src 引入的，还要先获取脚本，再进行执行。
+等 JS 引擎执行完毕后，再交接给渲染引擎，继续 HTML 树和 CSS 规则树的构建。
+
+1. 如果 JS 和 DOM 元素或者其他 JS 代码之间的依赖不强的时候，使用 **async**。
+2. 如果 JS 依赖于 DOM 元素和其他 JS 的执行结果，那就使用 **defer**。
+
+* 优化 - DOM 渲染问题
+
+当使用 JS 去操作 DOM 的时候，实际上是 JS 引擎和渲染引擎之间的沟通，这个沟通的过程要开销的。
+同时，操作 DOM 的时候修改了尺寸等元素，还会引起**回流**和**重绘**。
+
+1. **【CSS】**使用 visibility 替换 display
+2. **【CSS】**避免 table 布局。对于 Render Tree 的计算通常只需要遍历一次就可以完成，但是 table 布局需要计算多次，通常要花 3 倍于等同元素的时间，因此要避免。
+3. **【JS】**避免频繁做 width、height 等会触发回流的操作。
+4. **【JS】**操作 DOM 的时候，如果是添加 DOM 节点，可以将所有节点都在 JS 中操作完毕，再进行渲染（一次性）。
+
+## 预加载页面资源
+
+preload 提供了一种声明式的命令，让浏览器提前加载指定资源（加载后并不执行），在需要执行的时候再执行。
+
+``` html
+<!-- 使用 link 标签静态标记需要预加载的资源 -->
+<link rel="preload" href="/path/to/style.css" as="style">
+```
+
+preload 和 prefetch：
+
+* preload：告诉浏览器页面必定需要的资源，浏览器一定会加载这些资源。
+* prefetch：告诉浏览器页面可能需要的资源，浏览器不一定会加载这些资源。
+
+## 长列表
+
+* 懒加载
+
+* 虚拟列表（可视区域渲染）
+
+无限滚动在移动端很常见，但是可见区域渲染并不常见，主要是因为 IOS 上 UIWebView 的 onscroll 并不能实时触发。
+实现可见区域渲染的思路：
+
+1. 计算当前可见区域起始数据的 startIndex
+2. 计算当前可见区域结束数据的 endIndex
+3. 计算当前可见区域的数据，并渲染到页面中
+4. 计算 startIndex 对应的数据在整个列表中的偏移位置 startOffset，并设置到列表上
+
+![虚拟列表](./img/虚拟列表.png)
