'每天一点点-vue经典面试题'

--- a/vue/注册组件.md
+++ b/vue/注册组件.md
@@ -1,15 +1,16 @@
-components和 Vue.component
+``` js 
+// components和 Vue.component
 
-components:局部注册组件
+// components:局部注册组件
 export default{
   components:{home}
 }
 
-Vue.component:全局注册组件
+// Vue.component:全局注册组件
 Vue.component('home',home)
 
 Vue.use()
-注册组件,触发 install 方法
+// 注册组件,触发 install 方法
 
 var MyPlugin = {};
   MyPlugin.install = function (Vue, options) {
@@ -59,3 +60,5 @@ var MyPlugin = {};
   new Vue({
     el: '#app'
   });
+
+```
