'每天一点点'

--- a/性能优化.md
+++ b/性能优化.md
@@ -21,6 +21,13 @@ DNS 解析过程是一个知识点，详细可看：计算机网络 - DNS
 然后本地服务器向根服务器、顶级域名服务器、主域名服务器这些的请求就更不用说了，前端没法接触。
 所以这个步骤我们忽略先。
 
+``` html
+<meta http-equiv="x-dns-prefetch-control" content="on">
+<link rel="dns-prefetch" href="//###" />
+
+<!-- 作用：1、减少DNS的请求次数，2、进行DNS预先获取。 -->
+```
+
 ## TCP 连接
 
 计算机网络 - TCP 3 次握手和 4 次挥手……
