--- a/前端资料库/个人资料库.md
+++ b/前端资料库/个人资料库.md
@@ -40,9 +40,16 @@
 
 ### 全网最全题库
 
-* 没有答案需要自己思考查找
+* 答案需要自己思考查找
 
 [前端知识每日3+1](http://www.h-camel.com/index.html)
+
+### 以最新的 JavaScript 标准为基准。通过简单但足够详细的内容，为你讲解从基础到高阶的 JavaScript 相关知识。
+
+* 以最新的 JavaScript 标准为基准。通过简单但足够详细的内容，为你讲解从基础到高阶的JavaScript 相关知识。
+
+[以最新的 JavaScript 标准为基准。通过简单但足够详细的内容，为你讲解从基础到高阶的JavaScript 相关知识。](https://zh.javascript.info/)
+
 
 ### 程序员必去的7个海外网站
 
