'每天一点点'

--- a/算法/02动态规划解题套路框架.md
+++ b/算法/02动态规划解题套路框架.md
@@ -72,7 +72,7 @@ function helper(memo, n) {
 
 ``` js
 function fib(n) {
-    if (n < 0) return 0;
+    if (n < 1) return 0;
     if (n == 1 || n == 2) return 1;
     var dp = new Array(n).fill(0)
     dp[1] = dp[2] = 1
@@ -97,12 +97,12 @@ function fib(n) {
 
 ``` js
 function fib(n) {
-    if (n < 0) return 0;
+    if (n < 1) return 0;
     if (n == 1 || n == 2) return 1;
     var dp = new Array(n).fill(0)
     let prev = 1,
         curr = 1
-    for (let i = 3; i <= 20; i++) {
+    for (let i = 3; i <= n; i++) {
         var sum = prev + curr
         prev = curr
         curr = sum
