--- a/算法/03回溯算法解题套路框架.md
+++ b/算法/03回溯算法解题套路框架.md
@@ -27,11 +27,82 @@ def backtrack(路径, 选择列表):
 
 **其核心就是 for 循环里面的递归，在递归调用之前「做选择」，在递归调用之后「撤销选择」**，特别简单。
 
-
 ### 全排列问题
 
 我们也知道 n 个不重复的数，全排列共有 n! 个。
 
 ``` js
+function permute(nums) {
+    var res = new Array()
+    var track = new Array()
+    backtrack(nums, track)
+    return res
 
+    // nums 路径 track 选择列表
+    function backtrack(nums, track) {
+        // 结束条件：也就是到达决策树底层，无法再做选择的条件。
+        if (track.length === nums.length) {
+            res.push(track.slice())
+            return
+        }
+        for (let i = 0; i < nums.length; i++) {
+            if (track.includes(nums[i])) {
+                continue
+            }
+            // 选择
+            track.push(nums[i])
+            backtrack(nums, track)
+            // 取消选择
+            track.pop()
+        }
+    }
+}
+```
+
+### N 皇后问题
+
+* 这个问题很经典了，简单解释一下：给你一个 N×N 的棋盘，让你放置 N 个皇后，使得它们不能互相攻击。
+
+``` JS
+  /* 输入棋盘边长 n，返回所有合法的放置 */
+  var solveNQueens = function(n) {
+      const board = new Array(n);
+      for (let i = 0; i < n; i++) { // 棋盘的初始化
+          board[i] = new Array(n).fill('.');
+      }
+      const res = [];
+      const isValid = (row, col) => {
+          for (let i = 0; i < row; i++) { // 之前的行
+              for (let j = 0; j < n; j++) { // 所有的列
+                  if (board[i][j] == 'Q' && // 发现了皇后，并且和自己同列/对角线
+                      (j == col || i + j === row + col || i - j === row - col)) {
+                      return false; // 不是合法的选择
+                  }
+              }
+          }
+          return true;
+      }
+
+      function backtrack(row) {
+          if (row === n) {
+              const stringsBoard = board.slice(); // 拷贝一份board
+              for (let i = 0; i < n; i++) {
+                  stringsBoard[i] = stringsBoard[i].join(''); // 将每一行拼成字符串
+              }
+              res.push(stringsBoard)
+              return
+          }
+
+          for (let col = 0; col < n; col++) {
+              if (isValid(row, col)) {
+                  board[row][col] = 'Q'
+                  backtrack(row + 1)
+                  board[row][col] = '.'
+              }
+          }
+      }
+      backtrack(0);
+
+      return res;
+  };
 ```
