--- a/算法/03回溯算法解题套路框架.md
+++ b/算法/03回溯算法解题套路框架.md
@@ -106,3 +106,21 @@ function permute(nums) {
       return res;
   };
 ```
+
+### 总结
+
+* 回溯算法就是个多叉树的遍历问题，关键就是在前序遍历和后序遍历的位置做一些操作，算法框架如下：
+
+``` py
+
+def backtrack(...):
+    for 选择 in 选择列表:
+        做选择
+        backtrack(...)
+        撤销选择
+```
+
+**写 backtrack 函数时，需要维护走过的「路径」和当前可以做的「选择列表」，当触发「结束条件」时，将「路径」记入结果集。**
+
+动态规划的三个需要明确的点就是「状态」「选择」和「base case」，是不是就对应着走过的「路径」，当前的「选择列表」和「结束条件」?
+某种程度上说，动态规划的暴力求解阶段就是回溯算法。
