每天一点点

--- a/算法/zero/06滑动窗口算法框架.md
+++ b/算法/zero/06滑动窗口算法框架.md
@@ -1,6 +1,6 @@
 ## 06 滑动窗口算法框架
 
-### 
+### 最小覆盖子串
 
 ``` C++
 
@@ -44,23 +44,23 @@ void slidingWindow(string s, string t) {
 function slidingWindow(s, t) {
   let l=0;
   let r=0;
-  let missingType= 0;
+  let valid= 0;
   let need= {};
+  let window= {};
   for(let c of t){
-    if (!map[c]) {
-      missingType++;        // 需要找齐的种类数 +1
-      map[c] = 1;
+    if (!need[c]) {
+      need[c] = 1;
     } else {
-      map[c]++;
+      need[c]++;
     }
+    window[c] = 0
   }
-  let res='';
 
   while(r<s.length){
     const c=s[r];
     r++
 
-    while(missingType===0){ {
+    while(valid== Object.keys(need).length){ {
       const d = s[l];
       l++
     }
@@ -68,4 +68,161 @@ function slidingWindow(s, t) {
 
 }
 
+```
+
+暴力解法，代码大概是这样的：
+思路很直接，但是显然，这个算法的复杂度肯定大于 O(N^2) 了，不好。
+
+``` java
+for (int i = 0; i < s.size(); i++)
+    for (int j = i + 1; j < s.size(); j++)
+        if s[i:j] 包含 t 的所有字母:
+            更新答案
+```
+
+**滑动窗口算法的思路是这样：**
+
+1. 我们在字符串 S 中使用双指针中的左右指针技巧，初始化 left = right = 0，把索引**左闭右开**区间 [left, right) 称为一个「窗口」。
+2. 我们先不断地增加 right 指针扩大窗口 [left, right)，直到窗口中的字符串符合要求（包含了 T 中的所有字符）。
+3. 此时，我们停止增加 right，转而不断增加 left 指针缩小窗口 [left, right)，直到窗口中的字符串不再符合要求（不包含 T 中的所有字符了）。同时，每次增加 left，我们都要更新一轮结果。
+4. 重复第 2 和第 3 步，直到 right 到达字符串 S 的尽头。
+
+这个思路其实也不难，**第 2 步相当于在寻找一个「可行解」，然后第 3 步在优化这个「可行解」，最终找到最优解**，也就是最短的覆盖子串。左右指针轮流前进，窗口大小增增减减，窗口不断向右滑动，这就是「滑动窗口」这个名字的来历。
+
+现在开始套模板，只需要思考以下四个问题：
+
+1. 当移动 right 扩大窗口，即加入字符时，应该更新哪些数据？
+2. 什么条件下，窗口应该暂停扩大，开始移动 left 缩小窗口？
+3. 当移动 left 缩小窗口，即移出字符时，应该更新哪些数据？
+4. 我们要的结果应该在扩大窗口时还是缩小窗口时进行更新？
+
+### 字符串的排列 
+
+给定两个字符串 s1 和 s2，写一个函数来判断 s2 是否包含 s1 的排列。
+
+换句话说，第一个字符串的排列之一是第二个字符串的子串。
+
+``` js
+var checkInclusion = (s1, s2) => {
+    let left = right = valid = 0
+
+    let need = {}
+    let window = {}
+    for (let c of s1) {
+        if (!need[c]) {
+            need[c] = 1
+        } else {
+            need[c]++
+        }
+        window[c] = 0
+    }
+    while (right < s2.length) {
+        const c = s2[right]
+        if (need[c]) {
+            window[c]++
+            if (window[c] == need[c]) {
+                valid++
+            }
+        }
+        right++
+        while (right - left >= s1.length) {
+            if (valid == Object.keys(need).length) {
+                return true
+            }
+            const d = s2[left]
+            if (need[d]) {
+                if (window[d] == need[d]) {
+                    valid--
+                }
+                window[d]--
+            }
+            left++
+        }
+    }
+
+    return false
+}
+```
+
+### 找到字符串中所有字母异位词
+
+给定一个字符串 s 和一个非空字符串 p，找到 s 中所有是 p 的字母异位词的子串，返回这些子串的起始索引。
+
+字符串只包含小写英文字母，并且字符串 s 和 p 的长度都不超过 20100。
+
+* 字母异位词指字母相同，但排列不同的字符串。
+* 不考虑答案输出的顺序。
+
+``` js
+var findAnagrams = (s, p) => {
+    let left = right = valid = 0
+
+    let need = {}
+    let window = {}
+    let res = []
+    for (let c of s1) {
+        if (!need[c]) {
+            need[c] = 1
+        } else {
+            need[c]++
+        }
+        window[c] = 0
+    }
+    while (right < s.length) {
+        const c = s[right]
+        if (need[c]) {
+            window[c]++
+            if (window[c] == need[c]) {
+                valid++
+            }
+        }
+        right++
+        while (right - left >= p.length) {
+            if (valid == Object.keys(need).length) {
+                res.push(left)
+            }
+            const d = s[left]
+            if (need[d]) {
+                if (window[d] == need[d]) {
+                    valid--
+                }
+                window[d]--
+            }
+            left++
+        }
+    }
+
+    return res
+}
+```
+
+### 无重复字符的最长子串
+
+给定一个字符串，请你找出其中不含有重复字符的 最长子串 的长度。
+
+``` js
+var lengthOfLongestSubstring = (s) => {
+
+    let left = right = 0
+
+    let window = {}
+    let res = 0
+    for (let c of s) {
+        window[c] = 0
+    }
+
+    while (right < s.length) {
+        const c = s[right]
+        right++
+        window[c]++
+        while (window[c] > 1) {
+            const d = s[left]
+            left++
+            window[d]--
+        }
+
+        res = Math.max(res, right - left)
+    }
+    return res
+}
 ```
