每天一点点

--- a/算法/01-22/手把手带你刷二叉树（第二期）.md
+++ b/算法/01-22/手把手带你刷二叉树（第二期）.md
@@ -57,3 +57,60 @@ var buildTree = function(preorder, inorder) {
     return root
 };
 ```
+
+### 106. 从中序与后序遍历序列构造二叉树
+
+根据一棵树的中序遍历与后序遍历构造二叉树。
+
+``` 
+
+中序遍历 inorder = [9,3,15,20,7]
+后序遍历 postorder = [9,15,7,20,3]
+返回如下的二叉树：
+
+    3
+   / \
+  9  20
+    /  \
+   15   7
+
+```
+
+``` js
+var buildTree = function(inorder, postorder) {
+    if (inorder.length == 0) return null
+    var rootVal = postorder[postorder.length - 1]
+    var root = new TreeNode(rootVal)
+    var mid = inorder.indexOf(rootVal)
+    root.left = buildTree(inorder.slice(0, mid), postorder.slice(0, mid))
+    root.right = buildTree(inorder.slice(mid + 1), postorder.slice(mid, postorder.length - 1))
+    return root
+};
+```
+
+``` js
+// 前中后 数据特点 
+var traverse(root) {
+    // [root.val,...left,...right]
+    // 前序遍历
+    preorder.add(root.val)
+
+    traverse(root.left)
+    traverse(root.right)
+}
+
+var traverse(root) {
+    // [...left,root.val,...right]
+    traverse(root.left)
+    inorder.add(root.val)
+    traverse(root.right)
+}
+
+var traverse(root) {
+    // [...left,...right,root.val]
+    traverse(root.left)
+    traverse(root.right)
+    // 后序遍历
+    postorder.add(root.val)
+}
+```
