每天一点点

--- a/JS/20210311/拷贝.md
+++ b/JS/20210311/拷贝.md
@@ -5,8 +5,37 @@
 基本数据类型：赋值之后两个变量互不影响
 引用数据类型：**赋址**，两个变量具有相同的引用地址，指向同一个对象，相互之间有影响
 
-### 浅拷贝
+### 浅拷贝 shallowClone
+
+**一个新的对象直接拷贝已存在的对象对象属性的引用，即浅拷贝。**
+
+浅拷贝方法：
+* Object.assgin
+* ...拓展运算符
+* concat浅拷贝数组
+* slice浅拷贝
+
+
+### 深拷贝 deepClone
+
+**深拷贝会另外拷贝一份一摸一样的对象，从堆内存中开辟一个新的区域存放新对象，新对象和原对象不共享内存，相互不影响。**
+
+深拷贝方法：
+* JSON.parse(JSON.stringify()) 无法解决循环引用问题，无法拷贝特殊对象：RegExp、Date、Map、Set等，无法拷贝函数
+* 使用成熟的第三方库：lodash.js -> lodash.cloneDeep()
+
+#### 手动实现一个深拷贝
+
+需求分析：
+1. 普通类型，直接返回
+2. 引用类型
+    * 循环引用，通过开辟一个新的存储空间，缓存当前对象和拷贝对象的对应关系，拷贝时，先去存储空间找，有则直接返回，无则继续拷贝 hash = new WeakMap()
+    * 可遍历类型 Set、Map、Array、Object
+    * 不可遍历类型 Boolean、Number、String、Date、Error、Symbol
+    * WeakMap、WeakSet、ArrayBuffer对象
+3. 拷贝函数 
+    * 非箭头函数 使用正则取出函数体和函数参数，然后使用new Funtion([...args] ,functionBody[0]) 构造函数重新构造一个新的函数
+    * 箭头函数（没有prototype）直接使用evel和函数字符串来重新生成一个箭头函数
 
 
 
-### 深拷贝
