fix: 每天一点点

--- a/项目/前端（线上环境）换肤思路.md
+++ b/项目/前端（线上环境）换肤思路.md
@@ -1,6 +1,6 @@
 # 项目换肤
 
-## css root变量
+## css root变量（2021/07/05需考虑国产UC/QQ/百度浏览器兼容性问题）
 
 ### 方案一 通过动态添加link 改变href
 
@@ -73,4 +73,17 @@ Object.entries(theme.js).forEach((key,val) => {
     });
     </script>
 </body>
+```
+
+## 通过ClassName  CSS in JS
+
+动态className
+
+```css
+#light {
+    ...
+}
+#dark {
+    ...
+}
 ```
