--- a/性能优化/滚动加载.md
+++ b/性能优化/滚动加载.md
@@ -1,4 +1,4 @@
-``` js 
+``` js
 
 function scrollAndLoading() {
   if(window.scrollY > prevY) {  // 判断用户是否向下滚动
@@ -10,4 +10,22 @@ function scrollAndLoading() {
 
   }
 
+```
+
+```js
+var images = document.getElementsByTagName("img");
+   function callback(entries) {
+    for (let i of entries) {
+      if (i.isIntersecting) {
+          let img = i.target;
+          let trueSrc = img.getAttribute("data-src");
+          img.setAttribute("src", trueSrc);
+          observer.unobserve(img);
+      }
+    } 
+  }
+      const observer = new IntersectionObserver(callback);
+      for (let i of images) {
+        observer.observe(i);
+      }
 ```
